# qweather-mcp-server

./: .gitignore  README.md  pyproject.toml
src/qweather_mcp/: __init__.py  server.py
