[project]
name = "haizhixin-qweather-mcp"
version = "0.1.0"
description = "QWeather MCP Server - 和风天气MCP服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.1",
    "httpx>=0.27.0",
]

[project.scripts]
qweather-mcp = "qweather_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qweather_mcp"]